<?xml version="1.0"?>
<package format="2">
  <name>heavy_talker</name>
  <version>0.0.0</version>
  <description>The heavy_talker package</description>

  <maintainer email="shivam@todo.todo">shivam</maintainer>

  <license>TODO</license>

  <depend>rospy</depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>
